--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+server.port=8081
+server.servlet.context-path=/app
 
+value.name=jefferson
+value.apellido=arenas
+value.random=${random.value}
+
+user.email=test@email.com
+user.password=1234
+user.age=25
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.level.org.apache=error
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.show-sql=true
